explore async-await with try-cath block

--- a/asynchronous.html
+++ b/asynchronous.html
@@ -6,6 +6,6 @@
     <title>Asynchronous</title>
   </head>
   <body>
-    <script src="./promise.js"></script>
+    <script src="./async_await.js"></script>
   </body>
 </html>
